# process-arpav-retriever

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.py311.txt
.github/workflows/: docker-build.yml
lambda/: lambda_function.py
src/process_arpav_retriever/: __init__.py  main.py
src/process_arpav_retriever/arpav/: __init__.py  arpav_precipitation_retriever.py  arpav_retriever_processor.py  arpav_water_level_retriever.py
